name:                lhevent
version:             0.0.0.0
synopsis:            Tools for analyzing the Monte Carlo event data in high energy physics
-- description:
homepage:            https://github.com/cbpark/lhevent
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2017 Chan Beom Park
category:            Data, Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git@github.com:cbpark/lhevent.git

flag devel
  description:         Create small test executables
  default:             False

library
  exposed-modules:     HEP.Data.LHEF
                       HEP.Data.LHEF.Parser
                       HEP.Data.LHEF.Type
  -- other-modules:
  -- other-extensions:
  build-depends:       base >= 4.9
                     , attoparsec >= 0.13
                     , bytestring >= 0.10
                     , containers >= 0.5
                     , hep-utilities >= 0.1
                     , transformers >= 0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unused-do-bind -O2 -funbox-strict-fields