name:                lhevent
version:             0.0.0.0
synopsis:            Tools for analyzing the Monte Carlo event data in high energy physics
-- description:
homepage:            https://github.com/cbpark/lhevent
bug-reports:         https://github.com/cbpark/lhevent/issues
license:             BSD3
license-file:        LICENSE
author:              Chan Beom Park
maintainer:          cbpark@gmail.com
copyright:           (c) 2017 Chan Beom Park
category:            Data, Physics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            https://github.com/cbpark/lhevent

flag devel
  description:         Create small test executables
  default:             False

library
  exposed-modules:     HEP.Data.LHCO
                       HEP.Data.LHCO.Parser
                       HEP.Data.LHCO.PipesUtil
                       HEP.Data.LHCO.Type
                       HEP.Data.LHEF
                       HEP.Data.LHEF.Parser
                       HEP.Data.LHEF.PipesUtil
                       HEP.Data.LHEF.Type
  -- other-modules:
  -- other-extensions:
  build-depends:       base             >= 4.9  && < 5
                     , attoparsec       >= 0.12
                     , bytestring       >= 0.10
                     , containers       >= 0.5
                     , hep-utilities    >= 0.1
                     , pipes            >= 4.1
                     , pipes-attoparsec >= 0.5
                     , pipes-bytestring >= 2.1
                     , transformers     >= 0.3
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unused-do-bind -O2 -funbox-strict-fields

executable lhco_parse_test
  main-is:             lhco_parse_test.hs
  build-depends:       base       >= 4.8
                     , attoparsec >= 0.12
                     , bytestring >= 0.10
                     , lhevent
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devel)
    buildable:         True
  else
    buildable:         False

executable lhco_pipesparse_test
  main-is:             lhco_pipesparse_test.hs
  build-depends:       base             >= 4.8
                     , bytestring       >= 0.10
                     , pipes            >= 4.1
                     , pipes-attoparsec >= 0.5
                     , pipes-bytestring >= 2.1
                     , transformers     >= 0.3
                     , lhevent
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devel)
    buildable:         True
  else
    buildable:         False

executable lhef_parse_test
  main-is:             lhef_parse_test.hs
  build-depends:       base       >= 4.8
                     , attoparsec >= 0.12
                     , bytestring >= 0.10
                     , lhevent
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devel)
    buildable:         True
  else
    buildable:         False

executable lhef_pipesparse_test
  main-is:             lhef_pipesparse_test.hs
  build-depends:       base             >= 4.8
                     , pipes            >= 4.1
                     , pipes-bytestring >= 2.1
                     , lhevent
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
  if flag(devel)
    buildable:         True
  else
    buildable:         False